java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119b.pass
package org.netbeans.test.java.hints;

/**
 * @author leon chiver
 */
public class IncorrectType58119b {
    
    public void doStuff2(StringBuffer d) {
        d = IncorrectType58119b.buffer();
    }
    
    private static StringBuffer buffer() {
        return null;
    }
}
